chore: impl create endpoint and refactoring tests